--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -558,143 +558,143 @@ workflows:
   version: 2
   build-and-test:
     jobs:
-      # - orb/lint:
-      #     <<: *config-2_7-small
-      #     name: lint
-      #     requires:
-      #       - build-2.7
-      # - orb/sorbet_type_checker:
-      #     <<: *config-2_7-small
-      #     name: sorbet_type_checker
-      #     requires:
-      #       - build-2.7
-      # - orb/coverage:
-      #     <<: *config-2_7-small
-      #     name: coverage
-      #     requires:
-      #       - test-2.1
-      #       - test-2.2
-      #       - test-2.3
-      #       - test-2.4
-      #       - test-2.5
-      #       - test-2.6
-      #       - test-2.7
-      #       - test-3.0
-      #       - test-3.1
-      #       # TODO: Re-enable once 3.2 testing is green!
-      #       #- test-3.2
-      #       # ADD NEW RUBIES HERE
-      #       - test-jruby-9.2.8.0
-      #       - test-jruby-9.2
-      #       - test-jruby-9.3
-      #       # soon™️ - test-truffleruby-22.3.0
-      # - orb/changelog:
-      #     <<: *config-2_7-small
-      #     name: changelog
-      #     requires:
-      #       - build-2.7
-      #     filters:
-      #       branches:
-      #         only: /bump_to_version_.*/
-      # # Integration
-      # - orb/build_and_test_integration:
-      #     name: build_and_test_integration-2.1
-      #     integration_apps: 'rack'
-      #     ruby_version: '2.1'
-      #     <<: *filters_all_branches_and_tags
-      # - orb/build_and_test_integration:
-      #     name: build_and_test_integration-2.2
-      #     integration_apps: 'rack'
-      #     ruby_version: '2.2'
-      #     <<: *filters_all_branches_and_tags
-      # - orb/build_and_test_integration:
-      #     name: build_and_test_integration-2.3
-      #     integration_apps: 'rack rails-five'
-      #     ruby_version: '2.3'
-      #     <<: *filters_all_branches_and_tags
-      # - orb/build_and_test_integration:
-      #     name: build_and_test_integration-2.4
-      #     integration_apps: 'rack rails-five'
-      #     ruby_version: '2.4'
-      #     <<: *filters_all_branches_and_tags
-      # - orb/build_and_test_integration:
-      #     name: build_and_test_integration-2.5
-      #     integration_apps: 'rack rails-five rails-six'
-      #     ruby_version: '2.5'
-      #     <<: *filters_all_branches_and_tags
-      # - orb/build_and_test_integration:
-      #     name: build_and_test_integration-2.6
-      #     integration_apps: 'rack rails-five rails-six sinatra2-classic sinatra2-modular'
-      #     ruby_version: '2.6'
-      #     <<: *filters_all_branches_and_tags
-      # - orb/build_and_test_integration:
-      #     name: build_and_test_integration-2.7
-      #     integration_apps: 'rack rails-five rails-six rails-seven sinatra2-classic sinatra2-modular'
-      #     ruby_version: '2.7'
-      #     <<: *filters_all_branches_and_tags
-      # - orb/build_and_test_integration:
-      #     name: build_and_test_integration-3.0
-      #     integration_apps: 'rack rails-six rails-seven sinatra2-classic sinatra2-modular'
-      #     ruby_version: '3.0'
-      #     <<: *filters_all_branches_and_tags
-      # - orb/build_and_test_integration:
-      #     name: build_and_test_integration-3.1
-      #     integration_apps: 'rack rails-six rails-seven sinatra2-classic sinatra2-modular'
-      #     ruby_version: '3.1'
-      #     <<: *filters_all_branches_and_tags
-      # - orb/build_and_test_integration:
-      #     name: build_and_test_integration-3.2
-      #     integration_apps: 'rack rails-six rails-seven sinatra2-classic sinatra2-modular'
-      #     ruby_version: '3.2'
-      #     <<: *filters_all_branches_and_tags
-      # # ⬆️ **Note**: If add/remove test apps above, remember to also copy-paste the changes to the "edge" workflow further down the file.
-      # #
-      # # ADD NEW RUBIES HERE
-      # - orb/build:
-      #     <<: *config-2_1
-      #     name: build-2.1
-      # - orb/test:
-      #     <<: *config-2_1
-      #     name: test-2.1
-      #     requires:
-      #       - build-2.1
-      # - orb/build:
-      #     <<: *config-2_2
-      #     name: build-2.2
-      # - orb/test:
-      #     <<: *config-2_2
-      #     name: test-2.2
-      #     requires:
-      #       - build-2.2
-      # - orb/build:
-      #     <<: *config-2_3
-      #     name: build-2.3
-      # - orb/test:
-      #     <<: *config-2_3
-      #     name: test-2.3
-      #     requires:
-      #       - build-2.3
-      # - orb/benchmark:
-      #     <<: *config-2_3
-      #     name: benchmark-2.3
-      #     requires:
-      #       - build-2.3
-      # - orb/build:
-      #     <<: *config-2_4
-      #     name: build-2.4
-      # - orb/test:
-      #     <<: *config-2_4
-      #     name: test-2.4
-      #     requires:
-      #       - build-2.4
-      # - orb/build:
-      #     <<: *config-2_5
-      #     name: build-2.5
-      # - orb/test:
-      #     <<: *config-2_5
-      #     name: test-2.5
-      #     requires:
-      #       - build-2.5
+      - orb/lint:
+          <<: *config-2_7-small
+          name: lint
+          requires:
+            - build-2.7
+      - orb/sorbet_type_checker:
+          <<: *config-2_7-small
+          name: sorbet_type_checker
+          requires:
+            - build-2.7
+      - orb/coverage:
+          <<: *config-2_7-small
+          name: coverage
+          requires:
+            - test-2.1
+            - test-2.2
+            - test-2.3
+            - test-2.4
+            - test-2.5
+            - test-2.6
+            - test-2.7
+            - test-3.0
+            - test-3.1
+            # TODO: Re-enable once 3.2 testing is green!
+            #- test-3.2
+            # ADD NEW RUBIES HERE
+            - test-jruby-9.2.8.0
+            - test-jruby-9.2
+            - test-jruby-9.3
+            # soon™️ - test-truffleruby-22.3.0
+      - orb/changelog:
+          <<: *config-2_7-small
+          name: changelog
+          requires:
+            - build-2.7
+          filters:
+            branches:
+              only: /bump_to_version_.*/
+      # Integration
+      - orb/build_and_test_integration:
+          name: build_and_test_integration-2.1
+          integration_apps: 'rack'
+          ruby_version: '2.1'
+          <<: *filters_all_branches_and_tags
+      - orb/build_and_test_integration:
+          name: build_and_test_integration-2.2
+          integration_apps: 'rack'
+          ruby_version: '2.2'
+          <<: *filters_all_branches_and_tags
+      - orb/build_and_test_integration:
+          name: build_and_test_integration-2.3
+          integration_apps: 'rack rails-five'
+          ruby_version: '2.3'
+          <<: *filters_all_branches_and_tags
+      - orb/build_and_test_integration:
+          name: build_and_test_integration-2.4
+          integration_apps: 'rack rails-five'
+          ruby_version: '2.4'
+          <<: *filters_all_branches_and_tags
+      - orb/build_and_test_integration:
+          name: build_and_test_integration-2.5
+          integration_apps: 'rack rails-five rails-six'
+          ruby_version: '2.5'
+          <<: *filters_all_branches_and_tags
+      - orb/build_and_test_integration:
+          name: build_and_test_integration-2.6
+          integration_apps: 'rack rails-five rails-six sinatra2-classic sinatra2-modular'
+          ruby_version: '2.6'
+          <<: *filters_all_branches_and_tags
+      - orb/build_and_test_integration:
+          name: build_and_test_integration-2.7
+          integration_apps: 'rack rails-five rails-six rails-seven sinatra2-classic sinatra2-modular'
+          ruby_version: '2.7'
+          <<: *filters_all_branches_and_tags
+      - orb/build_and_test_integration:
+          name: build_and_test_integration-3.0
+          integration_apps: 'rack rails-six rails-seven sinatra2-classic sinatra2-modular'
+          ruby_version: '3.0'
+          <<: *filters_all_branches_and_tags
+      - orb/build_and_test_integration:
+          name: build_and_test_integration-3.1
+          integration_apps: 'rack rails-six rails-seven sinatra2-classic sinatra2-modular'
+          ruby_version: '3.1'
+          <<: *filters_all_branches_and_tags
+      - orb/build_and_test_integration:
+          name: build_and_test_integration-3.2
+          integration_apps: 'rack rails-six rails-seven sinatra2-classic sinatra2-modular'
+          ruby_version: '3.2'
+          <<: *filters_all_branches_and_tags
+      # ⬆️ **Note**: If add/remove test apps above, remember to also copy-paste the changes to the "edge" workflow further down the file.
+      #
+      # ADD NEW RUBIES HERE
+      - orb/build:
+          <<: *config-2_1
+          name: build-2.1
+      - orb/test:
+          <<: *config-2_1
+          name: test-2.1
+          requires:
+            - build-2.1
+      - orb/build:
+          <<: *config-2_2
+          name: build-2.2
+      - orb/test:
+          <<: *config-2_2
+          name: test-2.2
+          requires:
+            - build-2.2
+      - orb/build:
+          <<: *config-2_3
+          name: build-2.3
+      - orb/test:
+          <<: *config-2_3
+          name: test-2.3
+          requires:
+            - build-2.3
+      - orb/benchmark:
+          <<: *config-2_3
+          name: benchmark-2.3
+          requires:
+            - build-2.3
+      - orb/build:
+          <<: *config-2_4
+          name: build-2.4
+      - orb/test:
+          <<: *config-2_4
+          name: test-2.4
+          requires:
+            - build-2.4
+      - orb/build:
+          <<: *config-2_5
+          name: build-2.5
+      - orb/test:
+          <<: *config-2_5
+          name: test-2.5
+          requires:
+            - build-2.5
       - orb/build:
           <<: *config-2_6
           name: build-2.6
@@ -703,33 +703,33 @@ workflows:
           name: test-2.6
           requires:
             - build-2.6
-      # - orb/build:
-      #     <<: *config-2_7
-      #     name: build-2.7
-      # - orb/test:
-      #     <<: *config-2_7
-      #     name: test-2.7
-      #     requires:
-      #       - build-2.7
-      # - orb/build:
-      #     <<: *config-3_0
-      #     name: build-3.0
-      # - orb/test:
-      #     <<: *config-3_0
-      #     name: test-3.0
-      #     requires:
-      #       - build-3.0
-      # - orb/build:
-      #     <<: *config-3_1
-      #     name: build-3.1
-      # - orb/test:
-      #     <<: *config-3_1
-      #     name: test-3.1
-      #     requires:
-      #       - build-3.1
-      # - orb/build:
-      #     <<: *config-3_2
-      #     name: build-3.2
+      - orb/build:
+          <<: *config-2_7
+          name: build-2.7
+      - orb/test:
+          <<: *config-2_7
+          name: test-2.7
+          requires:
+            - build-2.7
+      - orb/build:
+          <<: *config-3_0
+          name: build-3.0
+      - orb/test:
+          <<: *config-3_0
+          name: test-3.0
+          requires:
+            - build-3.0
+      - orb/build:
+          <<: *config-3_1
+          name: build-3.1
+      - orb/test:
+          <<: *config-3_1
+          name: test-3.1
+          requires:
+            - build-3.1
+      - orb/build:
+          <<: *config-3_2
+          name: build-3.2
       # TODO: Re-enable once 3.2 testing is green!
       # - orb/test:
       #     <<: *config-3_2
@@ -772,47 +772,47 @@ workflows:
       #     requires:
       #       - build-truffleruby-22.3.0
       # Release jobs
-      # - "deploy prerelease Gem":
-      #     <<: *filters_all_branches_and_tags
-      #     requires:
-      #       - lint
-      #       - sorbet_type_checker
-      #       - test-2.1
-      #       - test-2.2
-      #       - test-2.3
-      #       - test-2.4
-      #       - test-2.5
-      #       - test-2.6
-      #       - test-2.7
-      #       - test-3.0
-      #       - test-3.1
-      #       # TODO: Re-enable once 3.2 testing is green!
-      #       #- test-3.2
-      #       # ADD NEW RUBIES HERE
-      #       - test-jruby-9.2.8.0
-      #       - test-jruby-9.2
-      #       - test-jruby-9.3
-      #       # soon™️ - test-truffleruby-22.3.0
-      # - "deploy release":
-      #     <<: *filters_only_release_tags
-      #     requires:
-      #       - lint
-      #       - sorbet_type_checker
-      #       - test-2.1
-      #       - test-2.2
-      #       - test-2.3
-      #       - test-2.4
-      #       - test-2.5
-      #       - test-2.6
-      #       - test-2.7
-      #       - test-3.0
-      #       - test-3.1
-      #       # TODO: Re-enable once 3.2 testing is green!
-      #       #- test-3.2
-      #       # ADD NEW RUBIES HERE
-      #       - test-jruby-9.2.8.0
-      #       - test-jruby-9.2
-      #       - test-jruby-9.3
+      - "deploy prerelease Gem":
+          <<: *filters_all_branches_and_tags
+          requires:
+            - lint
+            - sorbet_type_checker
+            - test-2.1
+            - test-2.2
+            - test-2.3
+            - test-2.4
+            - test-2.5
+            - test-2.6
+            - test-2.7
+            - test-3.0
+            - test-3.1
+            # TODO: Re-enable once 3.2 testing is green!
+            #- test-3.2
+            # ADD NEW RUBIES HERE
+            - test-jruby-9.2.8.0
+            - test-jruby-9.2
+            - test-jruby-9.3
+            # soon™️ - test-truffleruby-22.3.0
+      - "deploy release":
+          <<: *filters_only_release_tags
+          requires:
+            - lint
+            - sorbet_type_checker
+            - test-2.1
+            - test-2.2
+            - test-2.3
+            - test-2.4
+            - test-2.5
+            - test-2.6
+            - test-2.7
+            - test-3.0
+            - test-3.1
+            # TODO: Re-enable once 3.2 testing is green!
+            #- test-3.2
+            # ADD NEW RUBIES HERE
+            - test-jruby-9.2.8.0
+            - test-jruby-9.2
+            - test-jruby-9.3
             # soon™️ - test-truffleruby-22.3.0
   # This workflow runs the same `build` and `test` jobs as above on a schedule.
   # Tasks related to housekeeping (e.g. prerelease) are not relevant
