--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -281,11 +281,11 @@ orbs:
           - restore_cache:
               keys:
                 - bundle-{{ .Environment.CIRCLE_CACHE_VERSION }}-{{ checksum ".circleci/images/primary/binary_version" }}-<<parameters.ruby_version>>-{{ checksum "lib/ddtrace/version.rb" }}-{{ .Branch }}-{{ checksum ".circleci/bundle_checksum" }}
-          - run:
-              name: Set coverage report directory
-              command: |
-                # Create a unique coverage directory for this job, to avoid conflicts when merging all results
-                echo 'export COVERAGE_DIR="$COVERAGE_BASE_DIR/versions/$CIRCLE_JOB/$CIRCLE_NODE_INDEX"' >> $BASH_ENV
+          # - run:
+          #     name: Set coverage report directory
+          #     command: |
+          #       # Create a unique coverage directory for this job, to avoid conflicts when merging all results
+          #       echo 'export COVERAGE_DIR="$COVERAGE_BASE_DIR/versions/$CIRCLE_JOB/$CIRCLE_NODE_INDEX"' >> $BASH_ENV
           # Wait for containers to start
           - docker-wait:
               port: *postgres_port
@@ -308,10 +308,10 @@ orbs:
           - *step_run_all_tests
           - store_test_results:
               path: /tmp/rspec
-          - persist_to_workspace:
-              root: .
-              paths:
-                - coverage
+          # - persist_to_workspace:
+          #     root: .
+          #     paths:
+          #       - coverage
       benchmark:
         <<: *test_job_default
         docker:
@@ -568,26 +568,26 @@ workflows:
           name: sorbet_type_checker
           requires:
             - build-2.7
-      - orb/coverage:
-          <<: *config-2_7-small
-          name: coverage
-          requires:
-            - test-2.1
-            - test-2.2
-            - test-2.3
-            - test-2.4
-            - test-2.5
-            - test-2.6
-            - test-2.7
-            - test-3.0
-            - test-3.1
-            # TODO: Re-enable once 3.2 testing is green!
-            #- test-3.2
-            # ADD NEW RUBIES HERE
-            - test-jruby-9.2.8.0
-            - test-jruby-9.2
-            - test-jruby-9.3
-            # soon™️ - test-truffleruby-22.3.0
+      # - orb/coverage:
+      #     <<: *config-2_7-small
+      #     name: coverage
+      #     requires:
+      #       - test-2.1
+      #       - test-2.2
+      #       - test-2.3
+      #       - test-2.4
+      #       - test-2.5
+      #       - test-2.6
+      #       - test-2.7
+      #       - test-3.0
+      #       - test-3.1
+      #       # TODO: Re-enable once 3.2 testing is green!
+      #       #- test-3.2
+      #       # ADD NEW RUBIES HERE
+      #       - test-jruby-9.2.8.0
+      #       - test-jruby-9.2
+      #       - test-jruby-9.3
+      #       # soon™️ - test-truffleruby-22.3.0
       - orb/changelog:
           <<: *config-2_7-small
           name: changelog
@@ -597,56 +597,56 @@ workflows:
             branches:
               only: /bump_to_version_.*/
       # Integration
-      - orb/build_and_test_integration:
-          name: build_and_test_integration-2.1
-          integration_apps: 'rack'
-          ruby_version: '2.1'
-          <<: *filters_all_branches_and_tags
-      - orb/build_and_test_integration:
-          name: build_and_test_integration-2.2
-          integration_apps: 'rack'
-          ruby_version: '2.2'
-          <<: *filters_all_branches_and_tags
-      - orb/build_and_test_integration:
-          name: build_and_test_integration-2.3
-          integration_apps: 'rack rails-five'
-          ruby_version: '2.3'
-          <<: *filters_all_branches_and_tags
-      - orb/build_and_test_integration:
-          name: build_and_test_integration-2.4
-          integration_apps: 'rack rails-five'
-          ruby_version: '2.4'
-          <<: *filters_all_branches_and_tags
-      - orb/build_and_test_integration:
-          name: build_and_test_integration-2.5
-          integration_apps: 'rack rails-five rails-six'
-          ruby_version: '2.5'
-          <<: *filters_all_branches_and_tags
-      - orb/build_and_test_integration:
-          name: build_and_test_integration-2.6
-          integration_apps: 'rack rails-five rails-six sinatra2-classic sinatra2-modular'
-          ruby_version: '2.6'
-          <<: *filters_all_branches_and_tags
-      - orb/build_and_test_integration:
-          name: build_and_test_integration-2.7
-          integration_apps: 'rack rails-five rails-six rails-seven sinatra2-classic sinatra2-modular'
-          ruby_version: '2.7'
-          <<: *filters_all_branches_and_tags
-      - orb/build_and_test_integration:
-          name: build_and_test_integration-3.0
-          integration_apps: 'rack rails-six rails-seven sinatra2-classic sinatra2-modular'
-          ruby_version: '3.0'
-          <<: *filters_all_branches_and_tags
-      - orb/build_and_test_integration:
-          name: build_and_test_integration-3.1
-          integration_apps: 'rack rails-six rails-seven sinatra2-classic sinatra2-modular'
-          ruby_version: '3.1'
-          <<: *filters_all_branches_and_tags
-      - orb/build_and_test_integration:
-          name: build_and_test_integration-3.2
-          integration_apps: 'rack rails-six rails-seven sinatra2-classic sinatra2-modular'
-          ruby_version: '3.2'
-          <<: *filters_all_branches_and_tags
+      # - orb/build_and_test_integration:
+      #     name: build_and_test_integration-2.1
+      #     integration_apps: 'rack'
+      #     ruby_version: '2.1'
+      #     <<: *filters_all_branches_and_tags
+      # - orb/build_and_test_integration:
+      #     name: build_and_test_integration-2.2
+      #     integration_apps: 'rack'
+      #     ruby_version: '2.2'
+      #     <<: *filters_all_branches_and_tags
+      # - orb/build_and_test_integration:
+      #     name: build_and_test_integration-2.3
+      #     integration_apps: 'rack rails-five'
+      #     ruby_version: '2.3'
+      #     <<: *filters_all_branches_and_tags
+      # - orb/build_and_test_integration:
+      #     name: build_and_test_integration-2.4
+      #     integration_apps: 'rack rails-five'
+      #     ruby_version: '2.4'
+      #     <<: *filters_all_branches_and_tags
+      # - orb/build_and_test_integration:
+      #     name: build_and_test_integration-2.5
+      #     integration_apps: 'rack rails-five rails-six'
+      #     ruby_version: '2.5'
+      #     <<: *filters_all_branches_and_tags
+      # - orb/build_and_test_integration:
+      #     name: build_and_test_integration-2.6
+      #     integration_apps: 'rack rails-five rails-six sinatra2-classic sinatra2-modular'
+      #     ruby_version: '2.6'
+      #     <<: *filters_all_branches_and_tags
+      # - orb/build_and_test_integration:
+      #     name: build_and_test_integration-2.7
+      #     integration_apps: 'rack rails-five rails-six rails-seven sinatra2-classic sinatra2-modular'
+      #     ruby_version: '2.7'
+      #     <<: *filters_all_branches_and_tags
+      # - orb/build_and_test_integration:
+      #     name: build_and_test_integration-3.0
+      #     integration_apps: 'rack rails-six rails-seven sinatra2-classic sinatra2-modular'
+      #     ruby_version: '3.0'
+      #     <<: *filters_all_branches_and_tags
+      # - orb/build_and_test_integration:
+      #     name: build_and_test_integration-3.1
+      #     integration_apps: 'rack rails-six rails-seven sinatra2-classic sinatra2-modular'
+      #     ruby_version: '3.1'
+      #     <<: *filters_all_branches_and_tags
+      # - orb/build_and_test_integration:
+      #     name: build_and_test_integration-3.2
+      #     integration_apps: 'rack rails-six rails-seven sinatra2-classic sinatra2-modular'
+      #     ruby_version: '3.2'
+      #     <<: *filters_all_branches_and_tags
       # ⬆️ **Note**: If add/remove test apps above, remember to also copy-paste the changes to the "edge" workflow further down the file.
       #
       # ADD NEW RUBIES HERE
